mise a jour gallery

--- a/app/static/img/gallery/desktop.ini
+++ b/app/static/img/gallery/desktop.ini
@@ -8,3 +8,8 @@ pexels-photo-1211887.jpeg=@pexels-photo-1211887.jpeg,0
 pexels-photo-2097090.jpeg=@pexels-photo-2097090.jpeg,0
 pexels-photo-1352199.jpeg=@pexels-photo-1352199.jpeg,0
 pexels-photo-257816.jpeg=@pexels-photo-257816.jpeg,0
+eau-gazeuse.jpeg=@eau-gazeuse.jpeg,0
+jus_fruit.jpeg=@jus_fruit.jpeg,0
+frites.jpeg=@frites.jpeg,0
+escalope-marine-cordon.jpg=@escalope-marine-cordon.jpg,0
+nuggets.jpg=@nuggets.jpg,0
